samples/_failures_safe/1761275223_5b4f6b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2fc12046.c: In function ‘main’:
./samples/SAFE/__tmp_2fc12046.c:175:15: error: expected ‘;’ at end of input
  175 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_2fc12046.c:175:9: error: expected declaration or statement at end of input
  175 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_2fc12046.c:175:9: error: expected declaration or statement at end of input
